cruzy-demo/force-app/main/default/objects/Contact/fields/Account_Alert__c.field-meta.xml
<CustomField>
    <fullName>Account_Alert__c</fullName>
    <label>Account Alert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>