cruzy-demo/force-app/main/default/objects/Contact/fields/Authnet_Payment_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>Authnet_Payment_Profile_ID__c</fullName>
    <label>Authorize.net Payment Profile ID</label>
    <type>Text</type>
    <length>255</length>
</CustomField>