cruzy-demo/force-app/main/default/objects/Contact/fields/Authnet_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Authnet_Transaction_ID__c</fullName>
    <label>Authorize.net Transaction ID</label>
    <type>Text</type>
    <length>255</length>
</CustomField>