cruzy-demo/force-app/main/default/objects/Contact/fields/BOLO__c.field-meta.xml
<CustomField>
    <fullName>BOLO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BOLO</label>
    <type>Checkbox</type>
</CustomField>