cruzy-demo/force-app/main/default/objects/Contact/fields/CHG_Cruise_Counselor__c.field-meta.xml
<CustomField>
    <fullName>CHG_Cruise_Counselor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CHG Cruise Counselor</label>
    <type>Checkbox</type>
</CustomField>