cruzy-demo/force-app/main/default/objects/Contact/fields/Cruzy_Plus_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Cruzy_Plus_Enrolled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrolled in Cruzy+</label>
    <type>Checkbox</type>
</CustomField>