cruzy-demo/force-app/main/default/objects/Contact/fields/Cruzy_Plus_MBR_Number__c.field-meta.xml
<CustomField>
    <fullName>Cruzy_Plus_MBR_Number__c</fullName>
    <label>Cruzy+ Member Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>