cruzy-demo/force-app/main/default/objects/Contact/fields/Customer_Source__c.field-meta.xml
<CustomField>
    <fullName>Customer_Source__c</fullName>
    <label>Customer Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B2B Reward</fullName>
            </value>
            <value>
                <fullName>Cruise Club</fullName>
            </value>
            <value>
                <fullName>Cruzy.com Direct</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>