cruzy-demo/force-app/main/default/objects/Contact/fields/Do_Not_Call_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Call Regarding Renewal</label>
    <type>Checkbox</type>
</CustomField>