cruzy-demo/force-app/main/default/objects/Contact/fields/Invalid_Email__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invalid Email</label>
    <type>Checkbox</type>
</CustomField>