cruzy-demo/force-app/main/default/objects/Contact/fields/Membership_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Membership_On_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Membership On Hold</label>
    <type>Checkbox</type>
</CustomField>