cruzy-demo/force-app/main/default/objects/Contact/fields/PCC__c.field-meta.xml
<CustomField>
    <fullName>PCC__c</fullName>
    <label>Personal Cruise Counselor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PCC_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>