cruzy-demo/force-app/main/default/objects/Contact/fields/Phone_4__c.field-meta.xml
<CustomField>
    <fullName>Phone_4__c</fullName>
    <label>Phone 4</label>
    <type>Phone</type>
</CustomField>