cruzy-demo/force-app/main/default/objects/Contact/fields/Portal_Login_Count__c.field-meta.xml
<CustomField>
    <fullName>Portal_Login_Count__c</fullName>
    <label>Portal Login Count</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>