cruzy-demo/force-app/main/default/objects/Contact/fields/Portal_Password_Hash__c.field-meta.xml
<CustomField>
    <fullName>Portal_Password_Hash__c</fullName>
    <label>Portal Password Hash</label>
    <type>Text</type>
    <length>255</length>
</CustomField>