cruzy-demo/force-app/main/default/objects/Contact/fields/Portal_Reset_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Portal_Reset_Expiry__c</fullName>
    <label>Portal Reset Token Expiry</label>
    <type>DateTime</type>
</CustomField>