cruzy-demo/force-app/main/default/objects/Contact/fields/Portal_Reset_Token__c.field-meta.xml
<CustomField>
    <fullName>Portal_Reset_Token__c</fullName>
    <label>Portal Reset Token</label>
    <type>Text</type>
    <length>255</length>
</CustomField>