cruzy-demo/force-app/main/default/objects/Contact/fields/Primary_DOB__c.field-meta.xml
<CustomField>
    <fullName>Primary_DOB__c</fullName>
    <label>Primary Date of Birth</label>
    <type>Date</type>
</CustomField>