cruzy-demo/force-app/main/default/objects/Contact/fields/Referral_Reward__c.field-meta.xml
<CustomField>
    <fullName>Referral_Reward__c</fullName>
    <label>Referral Reward</label>
    <length>100</length>
    <type>Text</type>
</CustomField>