cruzy-demo/force-app/main/default/objects/Contact/fields/Referring_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referring_Contact__c</fullName>
    <label>Referring Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referred Customers</relationshipLabel>
    <relationshipName>Referred_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>