cruzy-demo/force-app/main/default/objects/Contact/fields/Refused_Email__c.field-meta.xml
<CustomField>
    <fullName>Refused_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refused to Provide Email</label>
    <type>Checkbox</type>
</CustomField>