cruzy-demo/force-app/main/default/objects/Contact/fields/Refused_Needed_Info__c.field-meta.xml
<CustomField>
    <fullName>Refused_Needed_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Refused Needed Info</label>
    <type>Checkbox</type>
</CustomField>