cruzy-demo/force-app/main/default/objects/Contact/fields/Secondary_DOB__c.field-meta.xml
<CustomField>
    <fullName>Secondary_DOB__c</fullName>
    <label>Secondary Date of Birth</label>
    <type>Date</type>
</CustomField>