cruzy-demo/force-app/main/default/objects/Contact/fields/Spanish_Speaking__c.field-meta.xml
<CustomField>
    <fullName>Spanish_Speaking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spanish Speaking</label>
    <type>Checkbox</type>
</CustomField>