cruzy-demo/force-app/main/default/objects/Contact/fields/Spouse_Significant_Other__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Significant_Other__c</fullName>
    <label>Spouse / Significant Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>