cruzy-demo/force-app/main/default/objects/Contact/fields/Sup_Call__c.field-meta.xml
<CustomField>
    <fullName>Sup_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sup Call</label>
    <type>Checkbox</type>
</CustomField>