cruzy-demo/force-app/main/default/objects/Contact/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eastern - Add 1 Hr</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Mountain - Subtract 1 Hr</fullName>
            </value>
            <value>
                <fullName>Pacific - Subtract 2 Hrs</fullName>
            </value>
            <value>
                <fullName>Alaska - Subtract 3 Hrs</fullName>
            </value>
            <value>
                <fullName>Hawaii - Subtract 4 Hrs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>