cruzy-demo/force-app/main/default/objects/Contact/fields/Unsubscribe_Email__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribe_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unsubscribe Email</label>
    <type>Checkbox</type>
</CustomField>