cruzy-demo/force-app/main/default/objects/Contact/fields/VIFP_Level_Secondary__c.field-meta.xml
<CustomField>
    <fullName>VIFP_Level_Secondary__c</fullName>
    <label>VIFP Level (Secondary)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Diamond</fullName>
            </value>
            <value>
                <fullName>Diamond Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>