cruzy-demo/force-app/main/default/objects/Contact/fields/VIFP_Number__c.field-meta.xml
<CustomField>
    <fullName>VIFP_Number__c</fullName>
    <label>VIFP Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>