cruzy-demo/force-app/main/default/objects/Contact/fields/VIFP_Number_Secondary__c.field-meta.xml
<CustomField>
    <fullName>VIFP_Number_Secondary__c</fullName>
    <label>VIFP Number (Secondary)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>