cruzy-demo/force-app/main/default/objects/Contact/fields/VIFP_Secondary_Belongs_To__c.field-meta.xml
<CustomField>
    <fullName>VIFP_Secondary_Belongs_To__c</fullName>
    <label>VIFP Secondary Belongs To</label>
    <length>100</length>
    <type>Text</type>
</CustomField>