cruzy-demo/force-app/main/default/objects/Contact/listViews/All_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>Customer_Source__c</columns>
    <columns>PCC__c</columns>
    <columns>Cruzy_Plus_Enrolled__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
    <language>en_US</language>
</ListView>