cruzy-demo/force-app/main/default/objects/Contact/listViews/My_Contacts.listView-meta.xml
<ListView>
    <fullName>My_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>Customer_Source__c</columns>
    <columns>Cruzy_Plus_Enrolled__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Contacts</label>
    <language>en_US</language>
</ListView>